# ugc_sprint_2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  start.py
.github/workflows/: python.yml
compose-services-data/clickhouse/node1/: config.xml
docker-entrypoint-initdb.d/: 01-clickhouse-initdb.sh
docs/: overall-service-architecure.md  ugc-architecture.md
docs/adr/: 001-solution-architecture.md  002-kafka-package.md
logs/: logstash.conf
nginx/: nginx.conf
nginx/conf.d/: app.conf
src/: agents.py  main.py  records.py
src/api/: routes.py
src/api/v1/: smoke.py
src/core/: config.py  logger.py
src/db/: clickhouse.py  models.py
src/models/: base.py
theory/: clickhouse.py  kafka_consumer.py  kafka_producer.py
