[tool.poetry]
name = "ugc_sprint_1"
version = "0.1.0"
description = ""
authors = ["felkamp <felkamp@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9.6"
uvicorn = "0.15.0"
fastapi = "0.68.1"
orjson = "3.6.3"
pydantic = {version = "1.8.2", extras = ["dotenv"]}
faust = "^1.10.4"
backoff = "^1.11.1"
clickhouse-driver = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^21.11b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
